--- a/computing/integrals/templates/base.html
+++ b/computing/integrals/templates/base.html
@@ -9,6 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script>
+        function addChar(char) {
+            document.getElementById("inputField").value += char;
+        }
+    </script>
 </head>
 <body>
 <div class="container my-5">
@@ -61,26 +66,27 @@
     </div>
     <div class="row">
         <div class="col my-5">
-            <button type="button" class="btn btn-outline-primary">P</button>
-            <button type="button" class="btn btn-outline-primary">P</button>
-            <button type="button" class="btn btn-outline-primary">P</button>
+            <button onclick="addChar('F')" type="button" class="btn btn-outline-primary">P</button>
+            <button onclick="addChar('F')" type="button" class="btn btn-outline-primary">P</button>
+            <button onclick="addChar('F')" type="button" class="btn btn-outline-primary">P</button>
         </div>
     </div>
+    {% if given %}
     <div class="row">
         <div class="col my-5">
             <p class="fs-3 fw-light">Дано:</p>
-            <p class="fs-3">{{ given }}</p>
+            <p class="fs-3">f(x) = {{ given }}</p>
         </div>
     </div>
     <div class="row">
         <div class="col my-5">
             <p class="fs-3 fw-light">Ответ:</p>
-            <p class="fs-3"><strong>{{ result }}</strong></p>
+            <p class="fs-3"><strong>F(x) = {{ result }}</strong></p>
         </div>
     </div>
     {% block plot %}
-
     {% endblock %}
+    {% endif %}
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
