--- a/computing/integrals/templates/definite_integral.html
+++ b/computing/integrals/templates/definite_integral.html
@@ -38,3 +38,12 @@
     </div>
 </div>
 {% endblock %}
+
+{% block plot %}
+<div class="row">
+    <div class="col my-5">
+        <p class="fs-3 fw-light">График:</p>
+        <img src="data:image/png;base64,{{ plot }}"/>
+    </div>
+</div>
+{% endblock %}
