--- a/computing/integrals/templates/indefinite_integral.html
+++ b/computing/integrals/templates/indefinite_integral.html
@@ -24,8 +24,12 @@
 {% block plot %}
 <div class="row">
     <div class="col my-5">
-        <p class="fs-3 fw-light">График:</p>
-        <img src="data:image/png;base64,{{ plot }}"/>
+        {% if plot %}
+            <p class="fs-3 fw-light">График:</p>
+            <img src="data:image/png;base64,{{ plot }}"/>
+        {% else %}
+            <p class="fs-3 fw-light">Не удалось построить график :(</p>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
