--- a/computing/integrals/templates/base.html
+++ b/computing/integrals/templates/base.html
@@ -76,7 +76,9 @@
             <button onclick="addChar('acot(')" type="button" class="btn btn-outline-primary">acot</button>
             <button onclick="addChar('pi')" type="button" class="btn btn-outline-primary">π</button>
             <button onclick="addChar('exp(')" type="button" class="btn btn-outline-primary">e</button>
-            <button onclick="addChar('log(, 2)')" type="button" class="btn btn-outline-primary">log₂</button>
+            <button onclick="addChar('log2(')" type="button" class="btn btn-outline-primary">log₂</button>
+            <button onclick="addChar('lg(')" type="button" class="btn btn-outline-primary">lg</button>
+            <button onclick="addChar('ln(')" type="button" class="btn btn-outline-primary">ln</button>
         </div>
     </div>
     {% if given %}
