--- a/computing/integrals/templates/definite_integral.html
+++ b/computing/integrals/templates/definite_integral.html
@@ -18,7 +18,7 @@
             <div class="input-group input-group-lg">
                 <div class="input-group input-group-sm mb-3 ">
                     <input type="text" name="up_lim" class="form-control" aria-label="Пример размера поля ввода"
-                           aria-describedby="inputGroup-sizing-sm" id="inputField_2" placeholder="+∞">
+                           aria-describedby="inputGroup-sizing-sm" id="inputField_2" placeholder="+∞" value="+∞">
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
         <div class="col">
             <div class="input-group input-group-sm mb-3">
                 <input type="text" name="low_lim" class="form-control" aria-label="Пример размера поля ввода"
-                       aria-describedby="inputGroup-sizing-sm" id="inputField_3" placeholder="-∞">
+                       aria-describedby="inputGroup-sizing-sm" id="inputField_3" placeholder="-∞" value="-∞">
             </div>
         </div>
     </div>
