--- a/computing/templates/articles.html
+++ b/computing/templates/articles.html
@@ -27,165 +27,22 @@
 </div>
 <div class="featured-section">
     <div class="container">
-        <h2>Популярные статьи</h2>
+        <h2>Случайные статьи</h2>
         <div class="featured-main">
+            {% for rand_article in random_articles %}
             <div class=" col-md-4 feature-text">
-                <img src="images/f1.jpg" alt="">
-                <h3>Aenean aliquam pretium felis, eu
-                    varius sapien. Mauris porttitor .</h3>
-                <p>Etiam feugiat lectus nisl, in euismod l
-                    ectus viverra et. Sed et scelerisqu
-                    e felis. Integer vel volutpat massa. Do
-                    nec id justo nisl. Vivamus malesuada,
-                    dolor a eleifend sagittis, neque arcu
-                    semper mi, eu finibus ,</p>
+                <img src="{{ rand_article.photo.url }}" alt="photo {{ rand_article.headline }}">
+                <h3>{{ rand_article.headline }}</h3>
+                <p>{{ rand_article.short_description }}</p>
                 <div class="wecome-button">
                     <a class="button rotate2" href="single.html">Read More<span> </span></a>
                 </div>
             </div>
-
-<!--            <div class=" col-md-4 feature-accord event-feature-accord">-->
-<!--                <ul class="topic_grid">-->
-<!--                    <li class="list1"><h3 class="m_3">List of Features</span></h3>-->
-<!--                        <div class="clear5"></div>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--                <div class="menu_vertical">-->
-<!--                    <section class="accordation_menu">-->
-<!--                        <div>-->
-<!--                            <input id="label-1" name="lida" type="radio" checked/>-->
-<!--                            <label for="label-1" id="item1"><i class="ferme"> </i><span class="m_5">Aliquam tincidunt mauris</span><i-->
-<!--                                    class="icon-plus-sign i-right1"></i><i class="icon-minus-sign i-right2"></i></label>-->
-<!--                            <div class="content" id="a1">-->
-<!--                                <ul class="news_list">-->
-<!--                                    <li class="date_desc">-->
-<!--                                        <p>Etiam feugiat lectus nisl, in euismod lectus viverra et.-->
-<!--                                            Sed et scelerisque felis. Integer vel volutpat massa.-->
-<!--                                            Donec id justo nisl. Vivamus .</p>-->
-<!--                                    </li>-->
-<!--                                    <div class="clearfix"></div>-->
-<!--                                </ul>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div>-->
-<!--                            <input id="label-2" name="lida" type="radio"/>-->
-<!--                            <label for="label-2" id="item2"><i class="icon-leaf" id="i2"></i>Cras ornare tristiave<i-->
-<!--                                    class="icon-plus-sign i-right1"></i><i class="icon-minus-sign i-right2"></i></label>-->
-<!--                            <div class="content" id="a2">-->
-<!--                                <ul class="news_list">-->
-<!--                                    <li class="date_desc">-->
-<!--                                        <p>Etiam feugiat lectus nisl, in euismod lectus viverra et.-->
-<!--                                            Sed et scelerisque felis. Integer vel volutpat massa.-->
-<!--                                            Donec id justo nisl. Vivamus .</p>-->
-<!--                                    </li>-->
-<!--                                    <div class="clearfix"></div>-->
-<!--                                </ul>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div>-->
-<!--                            <input id="label-3" name="lida" type="radio"/>-->
-<!--                            <label for="label-3" id="item3"><i class="icon-trophy" id="i3"></i>Present placerat riisus<i-->
-<!--                                    class="icon-plus-sign i-right1"></i><i class="icon-minus-sign i-right2"></i></label>-->
-<!--                            <div class="content" id="a3">-->
-<!--                                <ul class="news_list">-->
-<!--                                    <li class="date_desc">-->
-<!--                                        <p>Etiam feugiat lectus nisl, in euismod lectus viverra et.-->
-<!--                                            Sed et scelerisque felis. Integer vel volutpat massa.-->
-<!--                                            Donec id justo nisl. Vivamus .</p>-->
-<!--                                    </li>-->
-<!--                                    <div class="clearfix"></div>-->
-<!--                                </ul>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div>-->
-<!--                            <input id="label-4" name="lida" type="radio"/>-->
-<!--                            <label for="label-4" id="item4"><i class="icon-trophy" id="i4"></i>Fusce pellellentsque-->
-<!--                                suscrite<i class="icon-plus-sign i-right1"></i><i class="icon-minus-sign i-right2"></i></label>-->
-<!--                            <div class="content" id="a4">-->
-<!--                                <ul class="news_list">-->
-<!--                                    <li class="date_desc">-->
-<!--                                        <p>Etiam feugiat lectus nisl, in euismod lectus viverra et.-->
-<!--                                            Sed et scelerisque felis. Integer vel volutpat massa.-->
-<!--                                            Donec id justo nisl. Vivamus .</p>-->
-<!--                                    </li>-->
-<!--                                    <div class="clearfix"></div>-->
-<!--                                </ul>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div>-->
-<!--                            <input id="label-5" name="lida" type="radio"/>-->
-<!--                            <label for="label-5" id="item5"><i class="icon-trophy" id="i5"></i>Ut aliquam Solliicitudin-->
-<!--                                <i class="icon-plus-sign i-right1"></i><i class="icon-minus-sign i-right2"></i></label>-->
-<!--                            <div class="content" id="a5">-->
-<!--                                <ul class="news_list">-->
-<!--                                    <li class="date_desc">-->
-<!--                                        <p>Etiam feugiat lectus nisl, in euismod lectus viverra et.-->
-<!--                                            Sed et scelerisque felis. Integer vel volutpat massa.-->
-<!--                                            Donec id justo nisl. Vivamus .</p>-->
-<!--                                    </li>-->
-<!--                                    <div class="clearfix"></div>-->
-<!--                                </ul>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </section>-->
-
-<!--                </div>-->
-<!--            </div>-->
+            {% endfor %}
         </div>
     </div>
 </div>
-<!--start-footer-->
-<div class="footer-section">
-    <div class="container">
-        <div class="footer-grids">
-            <div class="col-md-3 footer-grid bottom-nav">
-                <h3>Information </h3>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="mail.html">Mail Us</a></li>
-                    <div class="clearfix"></div>
-                </ul>
-            </div>
-            <div class="col-md-3 footer-grid category">
-                <h3>Categories </h3>
-                <ul>
-                    <li><a href="#">Proin at tellus quis</a></li>
-                    <li><a href="#">Felis tincidun</a></li>
-                    <li><a href="#">Vestibulum</a></li>
-                    <li><a href="#">Sets</a></li>
-                    <li><a href="#">Praesent sit</a></li>
-                    <li><a href="#">Amet nulla molestie</a></li>
 
-                    <div class="clearfix"></div>
-                </ul>
-            </div>
-            <div class="col-md-3 footer-grid brands">
-                <h3>Menu </h3>
-                <ul>
-                    <li><a href="#">Pellentesque</a></li>
-                    <li><a href="#">Lorem ipsum dolor </a></li>
-                    <li><a href="#">Vestibulum pharetra</a></li>
-                    <li><a href="#">Donec eros dolor</li>
-                    <div class="clearfix"> </a> </div>
-                </ul>
-            </div>
-            <div class="col-md-3 footer-grid contact-list">
-                <h3>Contact</h3>
-                <ul>
-                    <li>Tel:1(234) 567-8901</li>
-                    <li>Tel:1(234) 567-8936</li>
-                    <div class="clearfix"></div>
-                </ul>
-
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
-</div>
-<!--//End-foote-->
 <div class="copy-right-section">
     <div class="container">
         <div class="col-md-6 copy-right">
